# botka

./: .env  .env.example  .gitignore  Dockerfile  README.md  botka.db  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.planka/: docker-compose.yml
botka/: __init__.py  __main__.py  bot.py  bot_di.py  bot_new.py  config.py  db.py  di_services.py  dishka_integration.py  providers.py  services.py
botka/modules/: __init__.py  ask_to_visit.py  basic.py  borrowed_items.py  broadcast.py  butler.py  camera.py  mac_monitoring.py  needs.py  polls.py  resident_tracker.py  tldr.py  userctl.py  vortex_of_doom.py  welcome.py
botka/modules/nlp/: __init__.py  classification.py  filtering.py  memory.py  processing.py  types.py
scripts/: planka_lists.py
src/: config.rs
src/botka/: config.py  main.py
src/botka/db/: models.py  session.py
src/botka/di/: container.py
src/botka/handlers/: __init__.py  menu.py  user_links.py
src/botka/mac_tracker/: __init__.py  web.py
src/botka/middlewares/: __init__.py  media_group.py  user_sync.py
src/botka/periodic/: __init__.py  runner.py  schedule.py
src/botka/services/: bambu_service.py  borrowed_item_detector.py  (+16 more)
src/modules/: basic.rs
src/utils/: mikrotik.rs
tests/: __init__.py  conftest.py  test_access_restrictions.py  test_basic.py  test_borrowed_items.py  test_broadcast.py  test_butler.py  test_camera.py  test_config.py  test_db.py  test_db_models.py  test_di_services.py  test_dishka_integration.py  test_mac_monitoring.py  test_modules.py  test_needs.py  test_nlp.py  test_nlp_processing.py  test_nlp_types.py  test_pins_messages.py  test_planka_commands.py  test_polls.py  test_polls_periodic_job.py  test_providers.py  test_resident_tracker.py  test_services.py  test_shopping_list_service.py  test_tldr.py  test_tovoice.py  test_user_service.py  test_userctl.py  test_vortex.py  test_welcome.py
(+52 files in other folders)
