[project]
name = "botka"
version = "0.1.0"
description = "F0RTHSP4CE Telegram Bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[webhooks]>=21.5",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "httpx>=0.27.2",
    "aiohttp>=3.10.10",
    "python-dotenv>=1.0.1",
    "apscheduler>=3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
botka = "botka.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["botka"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["botka"]
omit = ["tests/*"]
