[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botka"
version = "0.1.0"
description = "Telegram bot backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.24.0",
    "SQLAlchemy>=2.0.25",
    "dishka>=1.1.0",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "PyJWT>=2.9.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
botka = "botka.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
botka = ["mac_tracker/static/**/*"]
